# BRAVE

./: .gitignore  BRAVE_ENGINE_SPEC.md  Cargo.toml  LICENSE  README.md  build.rs
assets/models/beretta_92fs/: license.txt  scene.gltf
assets/models/classic_chair/: license.txt  scene.gltf
assets/models/classic_table/: scene.gltf
assets/models/glock_17/: license.txt  scene.gltf
assets/models/stand_mirror/: license.txt  scene.gltf
assets/shaders/: mesh.frag.glsl  mesh.vert.glsl  shadow.frag.glsl  shadow.vert.glsl  skybox.frag.glsl  skybox.vert.glsl
crates/brave_assets/: Cargo.toml  build.rs
crates/brave_assets/src/: ast.rs  gltf_loader.rs  image_loader.rs  lib.rs  manager.rs  shader_loader.rs
crates/brave_base_meshes/: Cargo.toml
crates/brave_base_meshes/src/: lib.rs
crates/brave_core/: Cargo.toml
crates/brave_core/src/: engine.rs  lib.rs  plugin.rs  runner.rs  time.rs
crates/brave_ecs/: Cargo.toml
crates/brave_ecs/src/: component.rs  entity.rs  hierarchy.rs  lib.rs  transform.rs  world.rs
crates/brave_input/: Cargo.toml
crates/brave_input/src/: lib.rs
crates/brave_math/: Cargo.toml
crates/brave_math/src/: lib.rs
crates/brave_render/: Cargo.toml  build.rs
crates/brave_render/src/: buffer.rs  camera.rs  context.rs  lib.rs  light.rs  mesh.rs  pipeline.rs  renderer.rs  swapchain.rs  texture.rs
crates/brave_scene/: Cargo.toml
crates/brave_scene/src/: hierarchy.rs  lib.rs
crates/brave_window/: Cargo.toml
crates/brave_window/src/: lib.rs
crates/brv_assets/: Cargo.toml  build.rs
crates/brv_assets/src/: gltf_loader.rs  image_loader.rs  lib.rs  shader_loader.rs
crates/brv_colors/: Cargo.toml
crates/brv_colors/src/: lib.rs
crates/brv_core/: Cargo.toml
crates/brv_core/src/: lib.rs  prelude.rs
crates/brv_ecs/: Cargo.toml
crates/brv_ecs/src/: lib.rs
crates/brv_engine/: Cargo.toml
crates/brv_engine/src/: lib.rs  object.rs  time.rs  types.rs  world.rs
crates/brv_input/: Cargo.toml
crates/brv_input/src/: lib.rs
crates/brv_math/: Cargo.toml
crates/brv_math/src/: lib.rs
crates/brv_render/: Cargo.toml
crates/brv_render/src/: lib.rs  renderer.rs
crates/brv_window/: Cargo.toml
crates/brv_window/src/: lib.rs
docs/: 01_structure.md  02_core.md  03_ecs.md  04_render.md  05_assets.md  06_scene.md  07_input.md  08_window.md  09_math.md  10_colors.md  11_infra.md  12_order.md  concept.md
src/: base_meshes.rs  camera.rs  game.rs  level.rs  main.rs  player.rs  utils.rs
