[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package]
name = "brave-game"
version = "0.1.0"
edition = "2024"

[package.metadata.brave]
asset_key = "u753f1g"

[dependencies]
brv_core = { path = "crates/brv_core" }

[build-dependencies]
naga = { version = "24", features = ["glsl-in", "spv-out"] }
gltf = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
toml = "0.8"
glam = "0.29"
