[package]
name = "brv_assets"
version = "0.1.0"
edition = "2024"

[dependencies]
brv_math = { path = "../brv_math" }
brv_colors = { path = "../brv_colors" }
naga = { version = "24", features = ["glsl-in", "spv-out"] }
gltf = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
toml = "0.8"
log = "0.4"

[build-dependencies]
toml = "0.8"
